# ptms

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROJECT_BOARD.md  README.md  main.py  pr-001.patch  pr-010.patch  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: adr-review.yml  ci.yml  semver.yml
docs/: CONTRIBUTING.md  EngineeringManifesto.md
docs/adr/: ADR-001-CleanArchitecture.md  ADR-002-WhySQLite.md  ADR-003-WhyUV.md  ADR-004-WorkbookAsPresentation.md  ADR-006-ISO-Standards.md  ADR-007-Money.md  ADR-008-AssessmentYear.md  ADR-009-AssessmentYear-Parsing.md  ADR-010-AssessmentYear-FinancialYear-Relationship.md  ADR_TEMPLATE.md  README.md
docs/architecture/: Architecture.md  DataModel.md  DomainRoadmap.md  Vision.md
docs/edr/: EDR-001.md
docs/engineering/: EngineeringManifesto.md  GitWorkflow.md
docs/glossary/: UbiquitousLanguage.md
docs/rfcs/: RFC-001-AssessmentYear.md
python/src/ptms/config/: settings.py
python/src/ptms/core/enums/: __init__.py  asset.py  country.py  currency.py  document.py  event.py  tax.py
python/src/ptms/core/exceptions/: __init__.py  assessment_year.py  base.py  financial_year.py  money.py
python/src/ptms/core/value_objects/: __init__.py  _year_utils.py  assessment_year.py  financial_year.py  money.py
python/tests/ptms/core/enums/: test_enums.py
python/tests/ptms/core/value_objects/: test_assessment_year.py  test_financial_year.py  test_money.py
scripts/: adr_review.py
